# netGausseSolver

./: .gitignore  CMakeLists.txt  Makefile  client_TCP.cpp  server.cpp  server_TCP.cpp  util.cpp  util.h
client/: CMakeLists.txt
client/src/: client.cpp
server/: CMakeLists.txt
server/src/: server.cpp
utils/: CMakeLists.txt
utils/include/: util.h
utils/src/: util.cpp
